--- a/index.html
+++ b/index.html
@@ -13,12 +13,6 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <h1>Heading 1</h1>
-    <h2>Heading 2</h2>
-    <h3>Heading 3</h3>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti commodi
-      sed a dolores praesentium. Expedita, assumenda quas. Enim, soluta dolorum.
-    </p>
+    <a href="#" class="link-arrow">Learn More</a>
   </body>
 </html>
