--- a/index.html
+++ b/index.html
@@ -13,10 +13,7 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <span class="icon-container">
-      <svg class="icon">
-        <use xlink:href="images/sprite.svg#wordpress"></use>
-      </svg>
-    </span>
+    <button class="btn btn--outline">Buy Now</button>
+    <a href="#" class="btn btn--outline">Buy Now</a>
   </body>
 </html>
