--- a/index.html
+++ b/index.html
@@ -13,20 +13,25 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <div class="media">
-      <div class="media__image">
-        <svg class="icon">
-          <use xlink:href="images/sprite.svg#snap"></use>
-        </svg>
-      </div>
-      <div class="media__body">
-        <h3 class="media__title">Easy Start & Managed Updates</h3>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia quas
-          dolorum placeat laboriosam asperiores, aperiam omnis illum fugiat
-          quisquam unde.
-        </p>
-      </div>
-    </div>
+    <blockquote class="quote">
+      <p class="quote__text">
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quia, et
+        officia? Eaque nobis in exercitationem harum. Consequatur, neque
+        expedita? Impedit?
+      </p>
+      <footer>
+        <div class="media">
+          <div class="media__image">
+            <svg class="icon quote__line">
+              <use xlink:href="images/sprite.svg#line"></use>
+            </svg>
+          </div>
+          <div class="media__body">
+            <h3 class="media__title quote__author">John Smith</h3>
+            <p class="quote__company">ABC Company</p>
+          </div>
+        </div>
+      </footer>
+    </blockquote>
   </body>
 </html>
