--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <li>.xyz $10</li>
       </ul>
     </section>
-    <section class="block container block-plan block-plans">
+    <section class="block container block-plans">
       <div class="grid grid--1x3">
         <div class="plan">
           <div class="card card--secondary">
@@ -154,7 +154,7 @@
       <article class="grid grid--1x2 feature">
         <div class="feature__content">
           <span class="icon-container">
-            <svg class="icon">
+            <svg class="icon icon--primary">
               <use xlink:href="images/sprite.svg#easy"></use>
             </svg>
           </span>
@@ -181,7 +181,7 @@
       <article class="grid grid--1x2 feature">
         <div class="feature__content">
           <span class="icon-container">
-            <svg class="icon">
+            <svg class="icon icon--primary">
               <use xlink:href="images/sprite.svg#computer"></use>
             </svg>
           </span>
@@ -208,7 +208,7 @@
       <article class="grid grid--1x2 feature">
         <div class="feature__content">
           <span class="icon-container">
-            <svg class="icon">
+            <svg class="icon icon--primary">
               <use xlink:href="images/sprite.svg#wordpress"></use>
             </svg>
           </span>
@@ -235,7 +235,7 @@
       <article class="grid grid--1x2 feature">
         <div class="feature__content">
           <span class="icon-container">
-            <svg class="icon">
+            <svg class="icon icon--primary">
               <use xlink:href="images/sprite.svg#clock"></use>
             </svg>
           </span>
@@ -302,7 +302,7 @@
                 </svg>
               </div>
               <div class="media__body">
-                <h3 class="media__title">Easy Start & Managed Updates</h3>
+                <h3 class="media__title">Staging, GIT & WP-CLI</h3>
                 <p>
                   Lorem ipsum dolor sit amet consectetur adipisicing elit.
                   Veniam quisquam, ex nostrum vero voluptates dicta excepturi
@@ -319,7 +319,7 @@
                 </svg>
               </div>
               <div class="media__body">
-                <h3 class="media__title">Easy Start & Managed Updates</h3>
+                <h3 class="media__title">Dynamic Caching & More</h3>
                 <p>
                   Lorem ipsum dolor sit amet consectetur adipisicing elit.
                   Veniam quisquam, ex nostrum vero voluptates dicta excepturi
@@ -362,7 +362,7 @@
               <footer>
                 <div class="media">
                   <div class="media__image">
-                    <svg class="icon quote__line">
+                    <svg class="icon icon--primary quote__line">
                       <use xlink:href="images/sprite.svg#line"></use>
                     </svg>
                   </div>
@@ -377,17 +377,19 @@
         </div>
       </div>
     </section>
-    <div class="callout callout--primary container">
-      <div class="grid grid--1x2">
-        <div class="callout__content">
-          <h2 class="callout__heading">Ready to Get Started?</h2>
-          <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsum
-            numquam ducimus tenetur quibusdam officiis iste perspiciatis id
-            tempore sunt nisi.
-          </p>
+    <div class="container">
+      <div class="callout callout--primary callout-signup">
+        <div class="grid grid--1x2">
+          <div class="callout__content">
+            <h2 class="callout__heading">Ready to Get Started?</h2>
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsum
+              numquam ducimus tenetur quibusdam officiis iste perspiciatis id
+              tempore sunt nisi.
+            </p>
+          </div>
+          <a href="#" class="btn btn--secondary btn--stretched">Get Started</a>
         </div>
-        <a href="#" class="btn btn--secondary btn--stretched">Get Started</a>
       </div>
     </div>
     <footer class="block block--dark footer">
